feat: Add comprehensive module system and framework enhancements
Phase 1 - Core Module System:
- Implement Module base class and ServiceProvider interface
- Add ModuleManager for discovery, loading, and lifecycle management
- Integrate module system into Application bootstrap
- Add module route registration with prefix support
- Add module view namespace support
- Implement CLI commands: module:make, module:list, module:enable, module:disable, module:install, module:install-all, module:publish, module:publish-all
- Support module migrations in migrate command
- Each module has its own composer.json for independent dependency management
- Modules use module.json as manifest file

Phase 2 - Module Enhancements:
- Implement module dependency resolution with topological sort
- Add module configuration system with automatic loading
- Implement module asset publishing to public directory
- Add module middleware registration support
- Enhanced module:list to show dependencies

Phase 3 - Framework Enhancements:
- Implement validation system with Validator and FormRequest classes
- Add event system with EventDispatcher and Event base class
- Implement cache system with multiple drivers (file, array, redis)
- Add PSR-3 compatible logging system with multiple channels
- Add helper functions: cache(), logger(), event(), storage_path()
- Integrate all systems into Application container

Phase 4 - Optional Features:
- Implement session management with multiple drivers (file, database, cookie)
- Add file storage abstraction with local and S3 drivers
- Implement mail system with SMTP, Mailgun, and SendGrid drivers
- Add API Resource base class for consistent API responses
- Add CLI commands: make:request, make:event, make:listener
- Create stubs for new make commands

Module Extension System:
- Add extend() methods to MailManager, CacheManager, and StorageManager
- Modules can register custom drivers via module.json extensions
- Automatic driver registration during module boot
- Ex

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Dependencies
 /vendor/
+modules/*/vendor/
+modules/*/composer.lock
 
 # Environment
 .env
@@ -36,4 +38,6 @@ coverage/
 
 # Docker
 .docker/
+
+.cursor/
 
