feat: Add admin panel system with settings and module management
This commit introduces a comprehensive admin panel system with multiple
enhancements to the core framework, module system, and CLI tools.

Admin Panel Features:
- Add admin routes, controllers, and middleware for protected admin area
- Implement SettingsService and Settings model for database-backed settings
- Add admin dashboard, settings management, and module management UI
- Create AdminMenuRegistry for module-based menu item registration
- Add admin-specific SCSS styles and layout improvements

Module System Enhancements:
- Add admin menu item support via getAdminMenuItems() method
- Add admin routes registration via registerAdminRoutes() method
- Implement module enable/disable functionality in ModuleManager
- Add getAllModules() method to discover all modules (including disabled)
- Add ModuleInstaller class for installing modules from Git/ZIP

CLI Tool Enhancements:
- Add db:seed command to run database seeders (all or specific class)
- Add make:seed command to generate seeder class stubs
- Improve serve command with router.php for PHP built-in server
- Update help text to include new commands

Core Framework Improvements:
- Enhance Container with has() method and improved closure resolution
- Add request() helper function for accessing request data
- Improve Route matching with trailing slash normalization
- Update Router to handle trailing slashes consistently
- Share request instance with all views via View factory
- Auto-load jQuery from public directory in vite() helper
- Bind ModuleManager, SettingsService, and ModuleInstaller to container

Database:
- Add settings table migration for storing application settings
- Add database seeder support with AdminUserSeeder example
- Add seed.stub template for generating seeders

Frontend:
- Update app.js to handle jQuery loaded from public directory
- Make toastr globally available
- Add admin.scss for admin panel styling
- Update vite config to disa

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./storage:/var/www/html/storage
     networks:
       # - traefik
-      - r7torrents-network
+      - isekaiphp-network
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.isekaiphp-php.rule=Host(`isekaiphp.localhost`)"
@@ -28,7 +28,7 @@ services:
       - "8282:80"
     networks:
       # - traefik
-      - r7torrents-network
+      - isekaiphp-network
     depends_on:
       - php
     labels:
@@ -42,20 +42,20 @@ services:
     container_name: isekaiphp-db
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: torrent_db
-      MYSQL_USER: torrent_user
-      MYSQL_PASSWORD: torrent_pass
+      MYSQL_DATABASE: isekaiphp
+      MYSQL_USER: isekaiphp
+      MYSQL_PASSWORD: isekaiphp
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - r7torrents-network
+      - isekaiphp-network
     ports:
-      - "3406:3306"
+      - "3706:3306"
 
 networks:
   # traefik:
   #   external: true
-  r7torrents-network:
+  isekaiphp-network:
     driver: bridge
 
 volumes:
